--- a/ui/MainUi.ui
+++ b/ui/MainUi.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Температура бетона</string>
   </property>
   <widget class="QWidget" name="shadow_drop">
    <property name="styleSheet">
